--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#006400</color>
-    <color name="colorPrimaryDark">#9acd32</color>
+    <color name="colorPrimary">#228b22</color>
+    <color name="colorPrimaryDark">#006400</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
