--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -22,6 +22,33 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_home" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:layout_width="match_parent"
+            app:srcCompat="@drawable/recipeek_logo"
+            android:id="@+id/imageView13"
+            android:layout_height="140dp" />
+
+        <SearchView
+            android:hint="Search for ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="searchForRecipes"/>
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:entries="@+array/recipe_category"/>
+    </LinearLayout>
 
 
 
