--- a/app/src/main/res/layout/activity_upload_main.xml
+++ b/app/src/main/res/layout/activity_upload_main.xml
@@ -11,157 +11,291 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jackiechans.recipeek.Upload_main">
 
-    <ScrollView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1"
+            android:layout_height="45dp"
+            android:weightSum="1">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="43dp"
+                app:srcCompat="@drawable/close_512"
+                android:id="@+id/imageView19"
+                android:onClick="backToMain"
+                />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.97" />
+
+            <ImageView
+                android:layout_width="56dp"
+                android:layout_height="43dp"
+                app:srcCompat="@drawable/correct_128"
+                android:id="@+id/imageView17"
+                android:layout_weight="0.05"
+                android:onClick="createActivityDone" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:weightSum="1">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="43dp"
-                    app:srcCompat="@drawable/close_512"
-                    android:id="@+id/imageView19"
-                    android:onClick="backToMain"
-                    />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="59dp"
-                    android:layout_weight="1" />
-
-                <ImageView
-                    android:layout_width="56dp"
-                    android:layout_height="43dp"
-                    app:srcCompat="@drawable/correct_128"
-                    android:id="@+id/imageView17"
-                    android:layout_weight="0.05"
-                    android:onClick="createActivityDone" />
-
-            </LinearLayout>
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="419dp"
-                android:layout_alignParentBottom="true"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="46dp">
+                android:layout_alignParentStart="true">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="448dp">
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="53dp">
+
+                        <TextView
+                            android:text="Add recipe"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView6"
+                            android:textColor="@android:color/black"
+                            android:textSize="24sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:weightSum="1">
+
+                        <TextView
+                            android:text="1.Title:"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView7"
+                            android:layout_weight="1.11"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPersonName"
+                            android:ems="10"
+                            android:id="@+id/titleEditText"
+                            android:hint="Add your title"
+                            tools:gravity="top" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="63dp"
+                        android:weightSum="1">
+
+                        <TextView
+                            android:text="2.Thumbnail"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView8"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+
+                        <ImageView
+                            android:layout_width="86dp"
+                            app:srcCompat="@drawable/unnamed"
+                            android:id="@+id/imageView5"
+                            android:layout_row="3"
+                            android:layout_column="1"
+                            android:layout_height="match_parent"
+                            android:onClick="OpenCamera" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:weightSum="1">
+
+                        <Spinner
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/category"
+                            android:layout_weight="0.80"
+                            />
+
+                        <Spinner
+                            android:layout_width="155dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/type"
+                            android:layout_weight="0.09" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:text="5.Ingredient:"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView9"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:id="@+id/ingredientContainer">
+
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:id="@+id/ingredient_0">
+
+                            <EditText
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:id="@+id/ingredient_name_0"
+                                android:layout_weight="1"
+                                android:hint="Type your ingredient"
+                                android:inputType="text" />
+
+                            <EditText
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:inputType="numberDecimal"
+                                android:ems="10"
+                                android:id="@+id/ingrendent_quantity_0"
+                                android:layout_weight="1"
+                                android:hint="Quantity" />
+
+                        </LinearLayout>
+
+                        <Button
+                            android:text="More ingredients"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/button9" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="68dp">
+
+                        <TextView
+                            android:text="6.Time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView10"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.39" />
+
+                        <EditText
+                            android:layout_width="149dp"
+                            android:layout_height="wrap_content"
+                            android:inputType="numberDecimal"
+                            android:ems="10"
+                            android:id="@+id/TimeEditText"
+                            android:hint="Cooking time"
+                            tools:gravity="top" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:text="7.Add steps"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/textView11"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+                </LinearLayout>
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/editText"
-                    android:layout_row="2"
-                    android:layout_column="0"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:hint="input title" />
-
-                <TextView
-                    android:text="2.Thumbnail"
-                    android:layout_width="155dp"
-                    android:layout_height="31dp"
-                    android:id="@+id/textView3"
-                    android:layout_row="3"
-                    android:layout_column="0"
-                    android:textColor="@android:color/background_dark"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:text="1.Title"
-                    android:layout_width="155dp"
-                    android:layout_height="33dp"
-                    android:id="@+id/textView2"
-                    android:layout_row="1"
-                    android:layout_column="0"
-                    android:textColor="@android:color/background_dark"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:text="4.Step"
-                    android:layout_width="153dp"
-                    android:layout_height="41dp"
-                    android:id="@+id/textView8"
-                    android:layout_row="6"
-                    android:layout_column="0"
-                    android:textColor="@android:color/background_dark"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:text="Add new recipe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:id="@+id/textView"
-                    android:textColor="@android:color/black"
-                    android:textSize="30sp"
-                    android:layout_row="0"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:text="3.Ingredient"
-                    android:layout_width="154dp"
-                    android:layout_height="36dp"
-                    android:id="@+id/textView4"
-                    android:layout_row="4"
-                    android:layout_column="0"
-                    android:textColor="@android:color/background_dark"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:layout_width="74dp"
-                    app:srcCompat="@drawable/unnamed"
-                    android:id="@+id/imageView5"
-                    android:layout_row="3"
-                    android:layout_column="1"
-                    android:layout_height="53dp" />
-
-                <ImageView
-                    android:layout_width="75dp"
-                    android:layout_height="53dp"
-                    app:srcCompat="@drawable/unnamed"
-                    android:id="@+id/imageView"
-                    android:layout_row="7"
-                    android:layout_column="0" />
+                    android:id="@+id/editText17"
+                    android:hint="Add step" />
 
                 <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="80dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/editText2"
-                    android:layout_row="5"
-                    android:layout_column="0"
-                    android:textColor="@android:color/black"
-                    android:hint="Add ingredients" />
+                    android:id="@+id/editText18"
+                    android:hint="Add step" />
 
                 <EditText
-                    android:layout_width="114dp"
-                    android:inputType="numberDecimal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
                     android:ems="10"
-                    android:id="@+id/editText3"
-                    android:hint="Total mins "
-                    android:layout_height="80dp" />
+                    android:id="@+id/editText19"
+                    android:hint="Add step" />
 
-            </GridLayout>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/editText20"
+                    android:hint="Add step" />
 
-        </LinearLayout>
-    </ScrollView>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/editText21"
+                    android:hint="Add step" />
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </RelativeLayout>
