--- a/app/src/main/res/layout/activity_favourite_recipes.xml
+++ b/app/src/main/res/layout/activity_favourite_recipes.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Favourites"
+            android:text="Favourites:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
@@ -31,15 +31,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:text="You have no favourites yet!"
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:id="@+id/textView4" />
 
         <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:id="@+id/listFavView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
+        </ListView>
     </LinearLayout>
 
 </LinearLayout>
