Deleted Class Step. Changed all array -> LinkedList in recipe class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,11 +31,11 @@
     <Button
         android:text="Search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:id="@+id/button9" />
 
     <Button
-        android:text="Teach"
+        android:text="Add Recipe"
         android:layout_width="match_parent"
         android:id="@+id/button4"
         android:layout_weight="0.11"
