--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="95dp"
         app:srcCompat="@drawable/recipeek_logo"
-        android:id="@+id/imageView" />
+        android:id="@+id/logo"
+        android:onClick="EditText"
+        />
 
     <Button
         android:text="Search"
